# 42My_Space

./: .gitignore  CONTEXT.md  Makefile  NOTES.txt  README.md  diag.sh  diag_peer.sh  diag_report_A.txt  diag_report_B.txt  fix_hangman.py  install.sh  live_mdns_check.py  old_tui.py  old_widgets.py  pyproject.toml  relay_server.py  render.yaml  requirements.txt  scratch_canvas.py  test_click.py  test_snake.py
diagnostics/: diag_c2r8p6.42perpignan.fr_20260316_223215.txt  diag_c2r8p6.42perpignan.fr_20260316_223316.txt  diag_c2r8p6.42perpignan.fr_20260316_223525.txt
ftmsg/: __init__.py  __main__.py  channel.py  client.py  crypto.py  discovery.py  forwarding.py  profile.py  protocol.py  security.py  store.py  style.tcss  test_center.py  test_games.py  test_grid.py  test_hangman.py  transport.py  trust.py  tui.py
ftmsg/games/: CONTRIBUTING_GAMES.md  base.py  battleship.py  canvas_utils.py  chess.py  connectfour.py  hangman.py  minesweeper.py  reversi.py  snake.py  tictactoe.py  twenty48.py  widgets.py  wordrace.py
myfriend_diagnostics/: diag_c2r8p4.42perpignan.fr_20260316_223535.txt  diag_c2r8p6.42perpignan.fr_20260316_223215.txt  diag_c2r8p6.42perpignan.fr_20260316_223316.txt
scripts/: diag_network.py  tunnel_session.sh
