[project]
name = "42msg"
version = "0.1.0"
description = "Messagerie terminal par salons (channels) en réseau local inter-postes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pynacl",
    "aiosqlite",
    "textual",
    "pytest",
    "websockets",
    "chess",
    "textual-canvas",
]

[project.optional-dependencies]
relay = ["websockets"]

[project.scripts]
42msg = "ftmsg:main"

[tool.setuptools]
packages = ["ftmsg"]
